# django_firewall

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
src/django_firewall/: middleware.py
tests/: test_middleware.py
